Bug 1253307 - Use a better function to load web handler apps in e10s. r=billm r=mconley, a=ritu

--HG--
extra : source : 70b8ca40c0913faed7e84d94a210159ef6f5c9c0